# OOPGame

./: .gitignore  .gitmodules  CMakeLists.txt  Game.sln  Game.vcxproj  Game.vcxproj.filters  README.md
conf/Resources/: Attack.txt  Defence.txt  UnitsProperties.txt
docs/: Game  design.drawio
include/: CGameAdmin.h
src/: CGameAdmin.cpp  CGameAdmin.h  CReader.cpp  CReader.h  Game.cpp
src/Defence/: CDefenceUnit.cpp  CDefenceUnit.h  CDefenceUnit.hpp
src/Map/: IMap.hpp  Map.cpp  Map.hpp
src/Offence/: COffenceUnit.cpp  COffenceUnit.h  COffenceUnit.hpp
src/Unit/: CUnitProperty.cpp  CUnitProperty.hpp  IUnit.hpp  IUnitMap.hpp  Unit.cpp  Unit.hpp
src/utils/: CAuxiliary.cpp  CAuxiliary.h  CConstants.h  CLocation.cpp  CLocation.h  CUnitProperty.cpp  CUnitProperty.h  _CUnitProperty.cpp  _CUnitProperty.h  utils.h
tests/: README.md
